<resources>
    <string name="app_name">KidsApp</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="abc">ABC</string>
    <string name="start">Start</string>
    <string name="about">About App</string>
    <string name="appInfoHeading">Application Information</string>
    <string name="appInfo">         This is an interesting app for kids to start learning with audio and graphics.</string>
    <string name="creatorInfoHead"> Application Creator Information</string>
    <string name="rollNo">          RollNo: BSEF18M009</string>
    <string name="name">            Name: Wajeeha Azeem</string>
    <string name="email">           Email: bsef18m009@pucit.edu.pk</string>
</resources>