<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="98dp"
        android:background="@color/skin">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:text="@string/appInfoHeading"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="291dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/appInfo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/creatorInfoHead"
            android:padding="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/rollNo" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/email" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>