<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="screen"
    android:foregroundTint="#000000"
    android:foregroundTintMode="src_over"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_marginStart="48dp"
        android:background="@color/black"
        android:backgroundTint="#FFF1F1"
        android:onClick="startAlphabets"
        android:text="@string/start"
        android:textColor="@color/skin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/button4"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:background="@color/black"
        android:onClick="AboutApp"
        android:text="@string/about"
        android:textColor="@color/skin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="239dp"
        android:layout_height="178dp"
        android:fontFamily="@font/chalkboyregular"
        android:padding="23dp"
        android:text="@string/abc"
        android:textColor="@color/design_default_color_error"
        android:textSize="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/download"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="82dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kids" />

</androidx.constraintlayout.widget.ConstraintLayout>